--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <section class="navigation">
+        <div class="nav-bar">
+            <div class=" initials">KS</div>
+            <div class="nav-button">Certifications / Languages</div>
+            <div class="nav-button">Programming Projects</div>
+            <div class="nav-button">System Admin Experience</div>
+            <div class="nav-button">Contact Me</div>
+            <div class="nav-button">Resume</div>
+        </div>
+    </section>
 
 </body>
 </html>
