--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section class="navigation">
+    <section id="navigation">
         <div class="nav-bar">
             <div class=" initials">KS</div>
             <div class="nav-button">Certifications / Languages</div>
@@ -14,6 +14,29 @@
             <div class="nav-button">System Admin Experience</div>
             <div class="nav-button">Contact Me</div>
             <div class="nav-button">Resume</div>
+        </div>
+    </section>
+    <section id="hero-section">
+        <div class="hero">
+            <div class="info">
+                <div class="intro">Hello I am</div>
+                <div class="name">Kristopher Scheuer</div>
+                <hr>
+                <div class="about">
+                    <p>Marine Corps Veteran with over 8 years in</p>
+                    <ul>
+                        <li>System Administration</li>
+                        <li>Automation & Scripting</li>
+                        <li>Cyber-security</li>
+                    </ul>
+                </div>
+                <div class="nav-button contact">Contact Me</div>
+            </div>
+            <div class="picture">
+                <div class="picture-border">
+                    <img src="pixelcut-export%20(1).png" alt="profile picture">
+                </div>
+            </div>
         </div>
     </section>
 
