Added the Certification and Language Section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,56 @@
             </div>
         </div>
     </section>
+    <section id="certs-lang">
+        <div class="certs">
+            <h1>Certifications</h1>
+            <hr>
+            <div class="cert-logos">
+                <figure>
+                    <img src="SecurityPlus%20Logo%20Certified%20CE.png" alt="Security+">
+                    <figcaption>Security+</figcaption>
+                </figure>
+                <figure>
+                    <img src="ccna_med.jpg" alt="CCNA">
+                    <figcaption>CCNA</figcaption>
+                </figure>
+                <figure>
+                    <img src="VCTA-DCV%202023-color.png" alt="VCTA-DCV">
+                    <figcaption>VCTA-DCV</figcaption>
+                </figure>
+            </div>
+        </div>
+        <div class="lang">
+            <h1>Languages</h1>
+            <hr>
+            <div class="lang-logos">
+                <figure>
+                    <img src="python.png" alt="python">
+                    <figcaption>Python</figcaption>
+                </figure>
+                <figure>
+                    <img src="powershell.png" alt="PowerShell">
+                    <figcaption>PowerShell</figcaption>
+                </figure>
+                <figure>
+                    <img src="Bash.png" alt="BASH">
+                    <figcaption>BASH</figcaption>
+                </figure>
+                <figure>
+                    <img src="html.png" alt="html">
+                    <figcaption>HTML</figcaption>
+                </figure>
+                <figure>
+                    <img src="CSS.png" alt="CSS">
+                    <figcaption>CSS</figcaption>
+                </figure>
+                <figure>
+                    <img src="JS.png" alt="JS">
+                    <figcaption>JS</figcaption>
+                </figure>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
