Linked the Nav bar to the new Certification Section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <section id="navigation">
         <div class="nav-bar">
             <div class=" initials">KS</div>
-            <div class="nav-button">Certifications / Languages</div>
+            <div class="nav-button"><a href="#certs-lang">Certifications / Languages</a></div>
             <div class="nav-button">Programming Projects</div>
             <div class="nav-button">System Admin Experience</div>
             <div class="nav-button">Contact Me</div>
