--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -86,6 +86,50 @@
                     <img src="JS.png" alt="JS">
                     <figcaption>JS</figcaption>
                 </figure>
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <div class="projects">
+            <h1>Programming Projects</h1>
+            <hr>
+            <div class="programming-projects">
+                <div class="project project-1">
+                    <h2>Project Name</h2>
+                    <img src="VCTA-DCV%202023-color.png" alt="Project 1">
+                    <p class="Description">
+                        Some default text to fill some space, and something more so<br>
+                        there is more text Some default text to fill some space, and<br>
+                        something more so there is more textS Some default text to<br>
+                        fill some space, and something more so there is more textome<br>
+                        default text to fill some space, and Some default text to<br>
+                        fill some space, and
+                    </p>
+                </div>
+                <div class="project project-2">
+                    <h2>Project Name</h2>
+                    <img src="VCTA-DCV%202023-color.png" alt="Project 1">
+                    <p class="Description">
+                        Some default text to fill some space, and something more so<br>
+                        there is more text Some default text to fill some space, and<br>
+                        something more so there is more textS Some default text to<br>
+                        fill some space, and something more so there is more textome<br>
+                        default text to fill some space, and Some default text to<br>
+                        fill some space, and
+                    </p>
+                </div>
+                <div class="project project-3">
+                    <h2>Project Name</h2>
+                    <img src="VCTA-DCV%202023-color.png" alt="Project 1">
+                    <p class="Description">
+                        Some default text to fill some space, and something more so<br>
+                        there is more text Some default text to fill some space, and<br>
+                        something more so there is more textS Some default text to<br>
+                        fill some space, and something more so there is more textome<br>
+                        default text to fill some space, and Some default text to<br>
+                        fill some space, and
+                    </p>
+                </div>
             </div>
         </div>
     </section>
