Linked Nav bar to Projects Section and added the language the project was written in under the image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="nav-bar">
             <div class=" initials">KS</div>
             <div class="nav-button"><a href="#certs-lang">Certifications / Languages</a></div>
-            <div class="nav-button">Programming Projects</div>
+            <div class="nav-button"><a href="#projects">Programming Projects</a></div>
             <div class="nav-button">System Admin Experience</div>
             <div class="nav-button">Contact Me</div>
             <div class="nav-button">Resume</div>
@@ -97,6 +97,7 @@
                 <div class="project project-1">
                     <h2>Project Name</h2>
                     <img src="VCTA-DCV%202023-color.png" alt="Project 1">
+                    <h4>Python CSS HTML</h4>
                     <p class="Description">
                         Some default text to fill some space, and something more so<br>
                         there is more text Some default text to fill some space, and<br>
@@ -109,6 +110,7 @@
                 <div class="project project-2">
                     <h2>Project Name</h2>
                     <img src="VCTA-DCV%202023-color.png" alt="Project 1">
+                    <h4>Python CSS HTML</h4>
                     <p class="Description">
                         Some default text to fill some space, and something more so<br>
                         there is more text Some default text to fill some space, and<br>
@@ -121,6 +123,7 @@
                 <div class="project project-3">
                     <h2>Project Name</h2>
                     <img src="VCTA-DCV%202023-color.png" alt="Project 1">
+                    <h4>Python CSS HTML</h4>
                     <p class="Description">
                         Some default text to fill some space, and something more so<br>
                         there is more text Some default text to fill some space, and<br>
