Added a home button to take the user back to the Hero Section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <section id="navigation">
         <div class="nav-bar">
             <div class=" initials">KS</div>
+            <div class="nav-button"><a href="#hero-section">Home</a></div>
             <div class="nav-button"><a href="#certs-lang">Certifications / Languages</a></div>
             <div class="nav-button"><a href="#projects">Programming Projects</a></div>
             <div class="nav-button">System Admin Experience</div>
