Added Experince Section and linked it to the Nav Bar

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <section id="navigation">
         <div class="nav-bar">
-            <div class=" initials">KS</div>
+            <div class="initials">KS</div>
             <div class="nav-button"><a href="#hero-section">Home</a></div>
             <div class="nav-button"><a href="#certs-lang">Certifications / Languages</a></div>
             <div class="nav-button"><a href="#projects">Programming Projects</a></div>
-            <div class="nav-button">System Admin Experience</div>
+            <div class="nav-button"><a href="#experience">System Admin Experience</a></div>
             <div class="nav-button">Contact Me</div>
             <div class="nav-button">Resume</div>
         </div>
@@ -133,6 +133,39 @@
                         default text to fill some space, and Some default text to<br>
                         fill some space, and
                     </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="experience">
+        <div class="experience">
+            <div class="sysadmin">
+                <div class="title">
+                    <h2>SysAdmin Experience</h2>
+                </div>
+                <hr>
+                <div class="skills">
+                    <ul>
+                        <li>Microsoft Windows Server</li>
+                        <li>RedHat Enterprise Linux</li>
+                        <li>VMware vSphere</li>
+                        <li>SCCM / ECM</li>
+                        <li>Cisco Call Manager</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="cybersecurity">
+                <div class="title">
+                    <h2>Cyber Security Experience</h2>
+                </div>
+                <hr>
+                <div class="skills">
+                    <ul>
+                        <li>IDS / IPS Systems</li>
+                        <li>Vulnerability Scanning</li>
+                        <li>Patch Management</li>
+                        <li>McAfee HBSS</li>
+                    </ul>
                 </div>
             </div>
         </div>
