Added Contact Section and linked to navbar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="nav-button"><a href="#certs-lang">Certifications / Languages</a></div>
             <div class="nav-button"><a href="#projects">Programming Projects</a></div>
             <div class="nav-button"><a href="#experience">System Admin Experience</a></div>
-            <div class="nav-button">Contact Me</div>
+            <div class="nav-button"><a href="#contact-me">Contact Me</a></div>
             <div class="nav-button">Resume</div>
         </div>
     </section>
@@ -170,6 +170,27 @@
             </div>
         </div>
     </section>
-
+    <section id="contact-me">
+        <div class="contact-me">
+            <h2>Get in Touch</h2>
+            <hr>
+            <p>KDScheuer97@gmail.com</p>
+            <p>619-740-1710</p>
+            <div class="icons">
+                <figure>
+                    <img src="linkedin.png" alt="Linked-In">
+                    <figcaption>LinkdIn</figcaption>
+                </figure>
+                <figure>
+                    <img src="github.png" alt="GitHub">
+                    <figcaption>GitHub</figcaption>
+                </figure>
+                <figure>
+                    <img src="resume.png" alt="Resume">
+                    <figcaption>Resume</figcaption>
+                </figure>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
