Linked hero section contact button to contact section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li>Cyber-security</li>
                     </ul>
                 </div>
-                <div class="nav-button contact">Contact Me</div>
+                <div class="nav-button contact"><a href="#contact-me">Contact Me</a></div>
             </div>
             <div class="picture">
                 <div class="picture-border">
