Fixed minor formatting issues

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         Some default text to fill some space, and something more so<br>
                         there is more text Some default text to fill some space, and<br>
                         something more so there is more textS Some default text to<br>
-                        fill some space, and something more so there is more textome<br>
+                        fill some space, and something more so there is more text some<br>
                         default text to fill some space, and Some default text to<br>
                         fill some space, and
                     </p>
@@ -116,7 +116,7 @@
                         Some default text to fill some space, and something more so<br>
                         there is more text Some default text to fill some space, and<br>
                         something more so there is more textS Some default text to<br>
-                        fill some space, and something more so there is more textome<br>
+                        fill some space, and something more so there is more text some<br>
                         default text to fill some space, and Some default text to<br>
                         fill some space, and
                     </p>
@@ -129,7 +129,7 @@
                         Some default text to fill some space, and something more so<br>
                         there is more text Some default text to fill some space, and<br>
                         something more so there is more textS Some default text to<br>
-                        fill some space, and something more so there is more textome<br>
+                        fill some space, and something more so there is more text some<br>
                         default text to fill some space, and Some default text to<br>
                         fill some space, and
                     </p>
@@ -156,7 +156,7 @@
             </div>
             <div class="cybersecurity">
                 <div class="title">
-                    <h2>Cyber Security Experience</h2>
+                    <h2>Cyber-security Experience</h2>
                 </div>
                 <hr>
                 <div class="skills">
