Linked the Social Media buttons to the appropriate accounts and added a PDF of the resume to open in a new tab once the resume button is clicked

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="nav-button"><a href="#projects">Programming Projects</a></div>
             <div class="nav-button"><a href="#experience">System Admin Experience</a></div>
             <div class="nav-button"><a href="#contact-me">Contact Me</a></div>
-            <div class="nav-button">Resume</div>
+            <div class="nav-button"><a href="Resume.pdf" target="_blank">Resume</a></div>
         </div>
     </section>
     <section id="hero-section">
@@ -177,18 +177,30 @@
             <p>KDScheuer97@gmail.com</p>
             <p>619-740-1710</p>
             <div class="icons">
-                <figure>
-                    <img src="linkedin.png" alt="Linked-In">
-                    <figcaption>LinkdIn</figcaption>
-                </figure>
-                <figure>
-                    <img src="github.png" alt="GitHub">
-                    <figcaption>GitHub</figcaption>
-                </figure>
-                <figure>
-                    <img src="resume.png" alt="Resume">
-                    <figcaption>Resume</figcaption>
-                </figure>
+                <div>
+                    <a href="https://www.linkedin.com/in/kdscheuer/" target="_blank">
+                        <div>
+                            <img src="linkedin.png" alt="Linked-In">
+                            <p>LinkdIn</p>
+                        </div>
+                    </a>
+                </div>
+                <div>
+                    <a href="https://github.com/KDScheuer" target="_blank">
+                        <div>
+                            <img src="github.png" alt="github">
+                            <p>GitHub</p>
+                        </div>
+                    </a>
+                </div>
+                <div>
+                    <a href="./Resume.pdf" target="_blank">
+                    <div>
+                        <img src="resume.png" alt="resume">
+                        <p>Resume</p>
+                    </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
