Added the Learn More button to all 3 projects

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Kris Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="nav-button"><a href="#projects">Programming Projects</a></div>
             <div class="nav-button"><a href="#experience">System Admin Experience</a></div>
             <div class="nav-button"><a href="#contact-me">Contact Me</a></div>
-            <div class="nav-button"><a href="Resume.pdf" target="_blank">Resume</a></div>
+            <div class="nav-button"><a href="Main_Page_Assets/Resume.pdf" target="_blank">Resume</a></div>
         </div>
     </section>
     <section id="hero-section">
@@ -35,7 +35,7 @@
             </div>
             <div class="picture">
                 <div class="picture-border">
-                    <img src="pixelcut-export%20(1).png" alt="profile picture">
+                    <img src="./Main_Page_Assets/Profile_Picture.png" alt="profile picture">
                 </div>
             </div>
         </div>
@@ -46,15 +46,15 @@
             <hr>
             <div class="cert-logos">
                 <figure>
-                    <img src="SecurityPlus%20Logo%20Certified%20CE.png" alt="Security+">
+                    <img src="./Main_Page_Assets/SecurityPlus%20Logo%20Certified%20CE.png" alt="Security+">
                     <figcaption>Security+</figcaption>
                 </figure>
                 <figure>
-                    <img src="ccna_med.jpg" alt="CCNA">
+                    <img src="Main_Page_Assets/ccna_med.jpg" alt="CCNA">
                     <figcaption>CCNA</figcaption>
                 </figure>
                 <figure>
-                    <img src="VCTA-DCV%202023-color.png" alt="VCTA-DCV">
+                    <img src="./Main_Page_Assets/VCTA-DCV%202023-color.png" alt="VCTA-DCV">
                     <figcaption>VCTA-DCV</figcaption>
                 </figure>
             </div>
@@ -64,27 +64,27 @@
             <hr>
             <div class="lang-logos">
                 <figure>
-                    <img src="python.png" alt="python">
+                    <img src="Main_Page_Assets/python.png" alt="python">
                     <figcaption>Python</figcaption>
                 </figure>
                 <figure>
-                    <img src="powershell.png" alt="PowerShell">
+                    <img src="Main_Page_Assets/powershell.png" alt="PowerShell">
                     <figcaption>PowerShell</figcaption>
                 </figure>
                 <figure>
-                    <img src="Bash.png" alt="BASH">
+                    <img src="Main_Page_Assets/Bash.png" alt="BASH">
                     <figcaption>BASH</figcaption>
                 </figure>
                 <figure>
-                    <img src="html.png" alt="html">
+                    <img src="Main_Page_Assets/html.png" alt="html">
                     <figcaption>HTML</figcaption>
                 </figure>
                 <figure>
-                    <img src="CSS.png" alt="CSS">
+                    <img src="Main_Page_Assets/CSS.png" alt="CSS">
                     <figcaption>CSS</figcaption>
                 </figure>
                 <figure>
-                    <img src="JS.png" alt="JS">
+                    <img src="Main_Page_Assets/JS.png" alt="JS">
                     <figcaption>JS</figcaption>
                 </figure>
             </div>
@@ -96,9 +96,10 @@
             <hr>
             <div class="programming-projects">
                 <div class="project project-1">
-                    <h2>Project Name</h2>
-                    <img src="VCTA-DCV%202023-color.png" alt="Project 1">
-                    <h4>Python CSS HTML</h4>
+
+                    <h2>Password Manager</h2>
+                    <img src="./Password_Manager_Project/Password_Manager_Assets/PM-Main-Menu.png" alt="Project 1">
+                    <h4>Python (Fernet, Hashlib, Tkinter)</h4>
                     <p class="Description">
                         Some default text to fill some space, and something more so<br>
                         there is more text Some default text to fill some space, and<br>
@@ -107,10 +108,11 @@
                         default text to fill some space, and Some default text to<br>
                         fill some space, and
                     </p>
+                    <div class="learn-more"><a href="Password_Manager_Project/PasswordManager.html" target="_blank">Learn More</a></div>
                 </div>
                 <div class="project project-2">
                     <h2>Project Name</h2>
-                    <img src="VCTA-DCV%202023-color.png" alt="Project 1">
+                    <img src="./Main_Page_Assets/VCTA-DCV%202023-color.png" alt="Project 1">
                     <h4>Python CSS HTML</h4>
                     <p class="Description">
                         Some default text to fill some space, and something more so<br>
@@ -120,10 +122,11 @@
                         default text to fill some space, and Some default text to<br>
                         fill some space, and
                     </p>
+                    <div class="learn-more"><a href="Password_Manager_Project/PasswordManager.html" target="_blank">Learn More</a></div>
                 </div>
                 <div class="project project-3">
                     <h2>Project Name</h2>
-                    <img src="VCTA-DCV%202023-color.png" alt="Project 1">
+                    <img src="./Main_Page_Assets/VCTA-DCV%202023-color.png" alt="Project 1">
                     <h4>Python CSS HTML</h4>
                     <p class="Description">
                         Some default text to fill some space, and something more so<br>
@@ -133,6 +136,7 @@
                         default text to fill some space, and Some default text to<br>
                         fill some space, and
                     </p>
+                    <div class="learn-more"><a href="Password_Manager_Project/PasswordManager.html" target="_blank">Learn More</a></div>
                 </div>
             </div>
         </div>
@@ -180,7 +184,7 @@
                 <div>
                     <a href="https://www.linkedin.com/in/kdscheuer/" target="_blank">
                         <div>
-                            <img src="linkedin.png" alt="Linked-In">
+                            <img src="Main_Page_Assets/linkedin.png" alt="Linked-In">
                             <p>LinkdIn</p>
                         </div>
                     </a>
@@ -188,15 +192,15 @@
                 <div>
                     <a href="https://github.com/KDScheuer" target="_blank">
                         <div>
-                            <img src="github.png" alt="github">
+                            <img src="Main_Page_Assets/github.png" alt="github">
                             <p>GitHub</p>
                         </div>
                     </a>
                 </div>
                 <div>
-                    <a href="./Resume.pdf" target="_blank">
+                    <a href="Main_Page_Assets/Resume.pdf" target="_blank">
                     <div>
-                        <img src="resume.png" alt="resume">
+                        <img src="Main_Page_Assets/resume.png" alt="resume">
                         <p>Resume</p>
                     </div>
                     </a>
