Added a Source Code button to password manager page

--- a/Password_Manager_Project/PasswordManager.html
+++ b/Password_Manager_Project/PasswordManager.html
@@ -19,6 +19,7 @@
     <section id="Project Intro" class="body">
         <h1> Password Manager </h1>
         <p class="description">Programed in python using Fernet, hashlib and Tkinter</p>
+        <div class="source-link nav-button"><a href="https://github.com/KDScheuer/Password-Manager">Source Code</a></div>
     </section>
     <section id="why" class="body">
         <h2>Why I Built this Application</h2>
@@ -49,6 +50,7 @@
         asdfsadfsafdsdfsafdsadfasdfsadfsdfsdf
         sadfsadfdsafsfsdfs</p>
     </section>
+    <footer></footer>
 
 </body>
 </html>
